text-box-trim accumulation fails when updating the CSS dynamically https://bugs.webkit.org/show_bug.cgi?id=285257 <rdar://problem/142386761>

Reviewed by Antti Koivisto.

Confusing RenderLayoutState handling is confusing. Let's move text-box-trim state over to LayoutContext.

RenderLayoutState gets pushed and popped through state maintainers and text-box-trim state setting missed one of these push-pops. However since text-box-trim should always carry over its state, there's no real reason to make it complicated by using RenderLayoutState.

* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-set-dynamically-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-set-dynamically-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-set-dynamically.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::textBoxTrim):
* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
(WebCore::LocalFrameViewLayoutContext::pushLayoutState):
* Source/WebCore/page/LocalFrameViewLayoutContext.h:
* Source/WebCore/rendering/RenderLayoutState.cpp:
(WebCore::RenderLayoutState::RenderLayoutState):
* Source/WebCore/rendering/RenderLayoutState.h:
(WebCore::RenderLayoutState::textBoxTrim): Deleted.
(WebCore::RenderLayoutState::setTextBoxTrim): Deleted.
(WebCore::RenderLayoutState::hasTextBoxTrimStart const): Deleted.
(WebCore::RenderLayoutState::hasTextBoxTrimEnd const): Deleted.
(WebCore::RenderLayoutState::removeTextBoxTrimStart): Deleted.
* Source/WebCore/rendering/TextBoxTrimmer.cpp:
(WebCore::removeTextBoxTrimStart):
(WebCore::TextBoxTrimmer::TextBoxTrimmer):
(WebCore::TextBoxTrimmer::~TextBoxTrimmer):
(WebCore::TextBoxTrimmer::adjustTextBoxTrimStatusBeforeLayout):
(WebCore::TextBoxTrimmer::adjustTextBoxTrimStatusAfterLayout):
(WebCore::TextBoxTrimmer::handleTextBoxTrimNoneBeforeLayout):
* Source/WebCore/rendering/TextBoxTrimmer.h:

Canonical link: https://commits.webkit.org/288480@main